k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-app-backend
  namespace: shop-app
spec:
  selector:
    app: shop-app-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
